exports[`Datepicker tests > a11y and snapshots #0`] = `
<div id="wrapper" style="display: inline-block;">
  <div style="padding: 10px;">
    <div class="denhaag-datepicker" data-placeholder="Kies een datum">
      <button
        type="button"
        class="denhaag-datepicker__button"
        aria-label="Kies een datum"
        tabindex="0"
      >
        <svg
          width="1em"
          height="1em"
          viewBox="0 0 24 24"
          fill="none"
          xmlns="http://www.w3.org/2000/svg"
          class="MuiSvgIcon-root denhaag-icon"
          focusable="false"
          aria-hidden="true"
          shape-rendering="auto"
        >
          <path
            d="M9 2a1 1 0 011 1v1h4V3a1 1 0 112 0v1h3a2 2 0 012 2v13a2 2 0 01-2 2H5a2 2 0 01-2-2V6a2 2 0 012-2h3V3a1 1 0 011-1zM8 6H5v3h14V6h-3v1a1 1 0 11-2 0V6h-4v1a1 1 0 01-2 0V6zm11 5H5v8h14v-8z"
            fill="currentColor"
          ></path>
        </svg></button
      ><input
        type="date"
        class="denhaag-datepicker__input"
        tabindex="0"
        value=""
      />
      <div
        class="denhaag-datepicker__calendar denhaag-datepicker__calendar--hidden"
        role="dialog"
        aria-modal="true"
        aria-label="Kies een datum"
        aria-live="polite"
      >
        <div class="denhaag-datepicker__calendar-header">
          <button
            type="button"
            class="denhaag-datepicker__calendar-navigation"
            aria-label="Vorige maand"
          >
            <svg
              width="1em"
              height="1em"
              viewBox="0 0 24 24"
              fill="none"
              xmlns="http://www.w3.org/2000/svg"
              class="MuiSvgIcon-root denhaag-icon"
              focusable="false"
              aria-hidden="true"
              shape-rendering="auto"
            >
              <path
                d="M14.3 18.7l-6-6c-.4-.4-.4-1 0-1.4l6-6c.4-.4 1-.4 1.4 0 .4.4.4 1 0 1.4L10.4 12l5.3 5.3c.4.4.4 1 0 1.4-.4.4-1 .4-1.4 0z"
                fill="currentColor"
              ></path>
            </svg></button
          ><span class="denhaag-datepicker__calendar-month" aria-live="polite"
            ><time datetime="2021-01">januari 2021</time></span
          ><button
            type="button"
            class="denhaag-datepicker__calendar-navigation"
            aria-label="Volgende maand"
          >
            <svg
              width="1em"
              height="1em"
              viewBox="0 0 24 24"
              fill="none"
              xmlns="http://www.w3.org/2000/svg"
              class="MuiSvgIcon-root denhaag-icon"
              focusable="false"
              aria-hidden="true"
              shape-rendering="auto"
            >
              <path
                d="M9.293 18.707a1 1 0 010-1.414L14.586 12 9.293 6.707a1 1 0 011.414-1.414l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414 0z"
                fill="currentColor"
              ></path>
            </svg>
          </button>
        </div>
        <table
          class="denhaag-datepicker__calendar-table"
          role="grid"
          aria-label="januari 2021"
        >
          <tbody>
            <tr>
              <th
                class="denhaag-datepicker__calendar-heading"
                abbr="maandag"
                scope="col"
              >
                ma
              </th>
              <th
                class="denhaag-datepicker__calendar-heading"
                abbr="dinsdag"
                scope="col"
              >
                di
              </th>
              <th
                class="denhaag-datepicker__calendar-heading"
                abbr="woensdag"
                scope="col"
              >
                wo
              </th>
              <th
                class="denhaag-datepicker__calendar-heading"
                abbr="donderdag"
                scope="col"
              >
                do
              </th>
              <th
                class="denhaag-datepicker__calendar-heading"
                abbr="vrijdag"
                scope="col"
              >
                vr
              </th>
              <th
                class="denhaag-datepicker__calendar-heading"
                abbr="zaterdag"
                scope="col"
              >
                za
              </th>
              <th
                class="denhaag-datepicker__calendar-heading"
                abbr="zondag"
                scope="col"
              >
                zo
              </th>
            </tr>
            <tr>
              <td></td>
              <td></td>
              <td></td>
              <td></td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  1
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  2
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  3
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  4
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  5
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  6
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  7
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  8
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  9
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  10
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  11
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  12
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  13
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  14
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  15
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  16
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  17
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  18
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  19
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  20
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day denhaag-datepicker__calendar-day--current"
                  tabindex="-1"
                >
                  21
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="0"
                >
                  22
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  23
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  24
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  25
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  26
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  27
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  28
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  29
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  30
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  31
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div style="padding: 10px;">
    <div
      class="denhaag-datepicker denhaag-datepicker--error"
      data-placeholder="Kies een datum"
    >
      <button
        type="button"
        class="denhaag-datepicker__button"
        aria-label="Kies een datum"
        tabindex="0"
      >
        <svg
          width="1em"
          height="1em"
          viewBox="0 0 24 24"
          fill="none"
          xmlns="http://www.w3.org/2000/svg"
          class="MuiSvgIcon-root denhaag-icon"
          focusable="false"
          aria-hidden="true"
          shape-rendering="auto"
        >
          <path
            d="M9 2a1 1 0 011 1v1h4V3a1 1 0 112 0v1h3a2 2 0 012 2v13a2 2 0 01-2 2H5a2 2 0 01-2-2V6a2 2 0 012-2h3V3a1 1 0 011-1zM8 6H5v3h14V6h-3v1a1 1 0 11-2 0V6h-4v1a1 1 0 01-2 0V6zm11 5H5v8h14v-8z"
            fill="currentColor"
          ></path>
        </svg></button
      ><input
        type="date"
        class="denhaag-datepicker__input"
        tabindex="0"
        value=""
      /><svg
        width="1em"
        height="1em"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
        class="MuiSvgIcon-root denhaag-icon denhaag-datepicker__error-icon"
        focusable="false"
        aria-hidden="true"
        shape-rendering="auto"
      >
        <g
          stroke="currentColor"
          fill="none"
          stroke-width="2"
          stroke-linecap="round"
          stroke-linejoin="round"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 001.71 3h16.94a2 2 0 001.71-3L13.71 3.86a2 2 0 00-3.42 0v0zM12 17h.01M12 9v4"
          ></path>
        </g>
      </svg>
      <div
        class="denhaag-datepicker__calendar denhaag-datepicker__calendar--hidden"
        role="dialog"
        aria-modal="true"
        aria-label="Kies een datum"
        aria-live="polite"
      >
        <div class="denhaag-datepicker__calendar-header">
          <button
            type="button"
            class="denhaag-datepicker__calendar-navigation"
            aria-label="Vorige maand"
          >
            <svg
              width="1em"
              height="1em"
              viewBox="0 0 24 24"
              fill="none"
              xmlns="http://www.w3.org/2000/svg"
              class="MuiSvgIcon-root denhaag-icon"
              focusable="false"
              aria-hidden="true"
              shape-rendering="auto"
            >
              <path
                d="M14.3 18.7l-6-6c-.4-.4-.4-1 0-1.4l6-6c.4-.4 1-.4 1.4 0 .4.4.4 1 0 1.4L10.4 12l5.3 5.3c.4.4.4 1 0 1.4-.4.4-1 .4-1.4 0z"
                fill="currentColor"
              ></path>
            </svg></button
          ><span class="denhaag-datepicker__calendar-month" aria-live="polite"
            ><time datetime="2021-01">januari 2021</time></span
          ><button
            type="button"
            class="denhaag-datepicker__calendar-navigation"
            aria-label="Volgende maand"
          >
            <svg
              width="1em"
              height="1em"
              viewBox="0 0 24 24"
              fill="none"
              xmlns="http://www.w3.org/2000/svg"
              class="MuiSvgIcon-root denhaag-icon"
              focusable="false"
              aria-hidden="true"
              shape-rendering="auto"
            >
              <path
                d="M9.293 18.707a1 1 0 010-1.414L14.586 12 9.293 6.707a1 1 0 011.414-1.414l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414 0z"
                fill="currentColor"
              ></path>
            </svg>
          </button>
        </div>
        <table
          class="denhaag-datepicker__calendar-table"
          role="grid"
          aria-label="januari 2021"
        >
          <tbody>
            <tr>
              <th
                class="denhaag-datepicker__calendar-heading"
                abbr="maandag"
                scope="col"
              >
                ma
              </th>
              <th
                class="denhaag-datepicker__calendar-heading"
                abbr="dinsdag"
                scope="col"
              >
                di
              </th>
              <th
                class="denhaag-datepicker__calendar-heading"
                abbr="woensdag"
                scope="col"
              >
                wo
              </th>
              <th
                class="denhaag-datepicker__calendar-heading"
                abbr="donderdag"
                scope="col"
              >
                do
              </th>
              <th
                class="denhaag-datepicker__calendar-heading"
                abbr="vrijdag"
                scope="col"
              >
                vr
              </th>
              <th
                class="denhaag-datepicker__calendar-heading"
                abbr="zaterdag"
                scope="col"
              >
                za
              </th>
              <th
                class="denhaag-datepicker__calendar-heading"
                abbr="zondag"
                scope="col"
              >
                zo
              </th>
            </tr>
            <tr>
              <td></td>
              <td></td>
              <td></td>
              <td></td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  1
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  2
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  3
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  4
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  5
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  6
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  7
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  8
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  9
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  10
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  11
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  12
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  13
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  14
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  15
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  16
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  17
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  18
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  19
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  20
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  21
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="0"
                >
                  22
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  23
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  24
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  25
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  26
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  27
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  28
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  29
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  30
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  31
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div style="padding: 10px;">
    <div
      class="denhaag-datepicker denhaag-datepicker--disabled"
      data-placeholder="Kies een datum"
    >
      <button
        type="button"
        class="denhaag-datepicker__button"
        aria-label="Kies een datum"
        tabindex="-1"
      >
        <svg
          width="1em"
          height="1em"
          viewBox="0 0 24 24"
          fill="none"
          xmlns="http://www.w3.org/2000/svg"
          class="MuiSvgIcon-root denhaag-icon"
          focusable="false"
          aria-hidden="true"
          shape-rendering="auto"
        >
          <path
            d="M9 2a1 1 0 011 1v1h4V3a1 1 0 112 0v1h3a2 2 0 012 2v13a2 2 0 01-2 2H5a2 2 0 01-2-2V6a2 2 0 012-2h3V3a1 1 0 011-1zM8 6H5v3h14V6h-3v1a1 1 0 11-2 0V6h-4v1a1 1 0 01-2 0V6zm11 5H5v8h14v-8z"
            fill="currentColor"
          ></path>
        </svg></button
      ><input
        disabled=""
        type="date"
        class="denhaag-datepicker__input"
        tabindex="-1"
        value=""
      />
      <div
        class="denhaag-datepicker__calendar denhaag-datepicker__calendar--hidden"
        role="dialog"
        aria-modal="true"
        aria-label="Kies een datum"
        aria-live="polite"
      >
        <div class="denhaag-datepicker__calendar-header">
          <button
            type="button"
            class="denhaag-datepicker__calendar-navigation"
            aria-label="Vorige maand"
          >
            <svg
              width="1em"
              height="1em"
              viewBox="0 0 24 24"
              fill="none"
              xmlns="http://www.w3.org/2000/svg"
              class="MuiSvgIcon-root denhaag-icon"
              focusable="false"
              aria-hidden="true"
              shape-rendering="auto"
            >
              <path
                d="M14.3 18.7l-6-6c-.4-.4-.4-1 0-1.4l6-6c.4-.4 1-.4 1.4 0 .4.4.4 1 0 1.4L10.4 12l5.3 5.3c.4.4.4 1 0 1.4-.4.4-1 .4-1.4 0z"
                fill="currentColor"
              ></path>
            </svg></button
          ><span class="denhaag-datepicker__calendar-month" aria-live="polite"
            ><time datetime="2021-01">januari 2021</time></span
          ><button
            type="button"
            class="denhaag-datepicker__calendar-navigation"
            aria-label="Volgende maand"
          >
            <svg
              width="1em"
              height="1em"
              viewBox="0 0 24 24"
              fill="none"
              xmlns="http://www.w3.org/2000/svg"
              class="MuiSvgIcon-root denhaag-icon"
              focusable="false"
              aria-hidden="true"
              shape-rendering="auto"
            >
              <path
                d="M9.293 18.707a1 1 0 010-1.414L14.586 12 9.293 6.707a1 1 0 011.414-1.414l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414 0z"
                fill="currentColor"
              ></path>
            </svg>
          </button>
        </div>
        <table
          class="denhaag-datepicker__calendar-table"
          role="grid"
          aria-label="januari 2021"
        >
          <tbody>
            <tr>
              <th
                class="denhaag-datepicker__calendar-heading"
                abbr="maandag"
                scope="col"
              >
                ma
              </th>
              <th
                class="denhaag-datepicker__calendar-heading"
                abbr="dinsdag"
                scope="col"
              >
                di
              </th>
              <th
                class="denhaag-datepicker__calendar-heading"
                abbr="woensdag"
                scope="col"
              >
                wo
              </th>
              <th
                class="denhaag-datepicker__calendar-heading"
                abbr="donderdag"
                scope="col"
              >
                do
              </th>
              <th
                class="denhaag-datepicker__calendar-heading"
                abbr="vrijdag"
                scope="col"
              >
                vr
              </th>
              <th
                class="denhaag-datepicker__calendar-heading"
                abbr="zaterdag"
                scope="col"
              >
                za
              </th>
              <th
                class="denhaag-datepicker__calendar-heading"
                abbr="zondag"
                scope="col"
              >
                zo
              </th>
            </tr>
            <tr>
              <td></td>
              <td></td>
              <td></td>
              <td></td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  1
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  2
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  3
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  4
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  5
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  6
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  7
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  8
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  9
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  10
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  11
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  12
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  13
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  14
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  15
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  16
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  17
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  18
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  19
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  20
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  21
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="0"
                >
                  22
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  23
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  24
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  25
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  26
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  27
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  28
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  29
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  30
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  31
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Datepicker tests > a11y and snapshots #1`] = `
<div id="wrapper" style="display: inline-block; width: 348px; height: 428px;">
  <div style="padding: 10px;">
    <div
      class="denhaag-datepicker denhaag-datepicker--has-value"
      data-placeholder="Kies een datum"
    >
      <button
        type="button"
        class="denhaag-datepicker__button"
        aria-label="Kies een datum"
        tabindex="0"
      >
        <svg
          width="1em"
          height="1em"
          viewBox="0 0 24 24"
          fill="none"
          xmlns="http://www.w3.org/2000/svg"
          class="MuiSvgIcon-root denhaag-icon"
          focusable="false"
          aria-hidden="true"
          shape-rendering="auto"
        >
          <path
            d="M9 2a1 1 0 011 1v1h4V3a1 1 0 112 0v1h3a2 2 0 012 2v13a2 2 0 01-2 2H5a2 2 0 01-2-2V6a2 2 0 012-2h3V3a1 1 0 011-1zM8 6H5v3h14V6h-3v1a1 1 0 11-2 0V6h-4v1a1 1 0 01-2 0V6zm11 5H5v8h14v-8z"
            fill="currentColor"
          ></path>
        </svg></button
      ><input
        type="date"
        class="denhaag-datepicker__input"
        tabindex="0"
        value="2022-01-12"
      />
      <div
        class="denhaag-datepicker__calendar"
        role="dialog"
        aria-modal="true"
        aria-label="Kies een datum"
        aria-live="polite"
      >
        <div class="denhaag-datepicker__calendar-header">
          <button
            type="button"
            class="denhaag-datepicker__calendar-navigation"
            aria-label="Vorige maand"
          >
            <svg
              width="1em"
              height="1em"
              viewBox="0 0 24 24"
              fill="none"
              xmlns="http://www.w3.org/2000/svg"
              class="MuiSvgIcon-root denhaag-icon"
              focusable="false"
              aria-hidden="true"
              shape-rendering="auto"
            >
              <path
                d="M14.3 18.7l-6-6c-.4-.4-.4-1 0-1.4l6-6c.4-.4 1-.4 1.4 0 .4.4.4 1 0 1.4L10.4 12l5.3 5.3c.4.4.4 1 0 1.4-.4.4-1 .4-1.4 0z"
                fill="currentColor"
              ></path>
            </svg></button
          ><span class="denhaag-datepicker__calendar-month" aria-live="polite"
            ><time datetime="2022-01">januari 2022</time></span
          ><button
            type="button"
            class="denhaag-datepicker__calendar-navigation"
            aria-label="Volgende maand"
          >
            <svg
              width="1em"
              height="1em"
              viewBox="0 0 24 24"
              fill="none"
              xmlns="http://www.w3.org/2000/svg"
              class="MuiSvgIcon-root denhaag-icon"
              focusable="false"
              aria-hidden="true"
              shape-rendering="auto"
            >
              <path
                d="M9.293 18.707a1 1 0 010-1.414L14.586 12 9.293 6.707a1 1 0 011.414-1.414l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414 0z"
                fill="currentColor"
              ></path>
            </svg>
          </button>
        </div>
        <table
          class="denhaag-datepicker__calendar-table"
          role="grid"
          aria-label="januari 2022"
        >
          <tbody>
            <tr>
              <th
                class="denhaag-datepicker__calendar-heading"
                abbr="maandag"
                scope="col"
              >
                ma
              </th>
              <th
                class="denhaag-datepicker__calendar-heading"
                abbr="dinsdag"
                scope="col"
              >
                di
              </th>
              <th
                class="denhaag-datepicker__calendar-heading"
                abbr="woensdag"
                scope="col"
              >
                wo
              </th>
              <th
                class="denhaag-datepicker__calendar-heading"
                abbr="donderdag"
                scope="col"
              >
                do
              </th>
              <th
                class="denhaag-datepicker__calendar-heading"
                abbr="vrijdag"
                scope="col"
              >
                vr
              </th>
              <th
                class="denhaag-datepicker__calendar-heading"
                abbr="zaterdag"
                scope="col"
              >
                za
              </th>
              <th
                class="denhaag-datepicker__calendar-heading"
                abbr="zondag"
                scope="col"
              >
                zo
              </th>
            </tr>
            <tr>
              <td></td>
              <td></td>
              <td></td>
              <td></td>
              <td></td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  1
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  2
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  3
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  4
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  5
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  6
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  7
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  8
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  9
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  10
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  11
                </button>
              </td>
              <td aria-selected="true">
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day denhaag-datepicker__calendar-day--selected"
                  tabindex="-1"
                >
                  12
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  13
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  14
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  15
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  16
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  17
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  18
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  19
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  20
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day denhaag-datepicker__calendar-day--current"
                  tabindex="0"
                >
                  21
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  22
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  23
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  24
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  25
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  26
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  27
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  28
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  29
                </button>
              </td>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  30
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  type="button"
                  class="denhaag-datepicker__calendar-day"
                  tabindex="-1"
                >
                  31
                </button>
              </td>
              <td></td>
              <td></td>
              <td></td>
              <td></td>
              <td></td>
              <td></td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
